src/objects/ZPAPER3__zEnable__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>zPaper server and other configuration info.</description>
    <fields>
        <fullName>ZPAPER3__Library__c</fullName>
        <defaultValue>&quot;2006Top&quot;</defaultValue>
        <description>zPaper folder ID for Library materials</description>
        <label>Library</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Org__c</fullName>
        <defaultValue>&quot;00D700000009gBV&quot;</defaultValue>
        <description>Org ID of the remote org that is sharing the Library</description>
        <label>Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__server__c</fullName>
        <defaultValue>&quot;sf.zpaper.com&quot;</defaultValue>
        <description>zPaper server</description>
        <label>server</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>zEnable</label>
</CustomObject>